src/objects/ADvendio__InvoiceRecipient__c.object
<CustomObject>
    <description>Invoice Contacts of an invoice. Needed for delivery.</description>
    <fields>
        <fullName>ADvendio__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invoice_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__Fax__c</fullName>
        <label>Fax</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FirstName__c</fullName>
        <label>FirstName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>ADvendio__Invoice__c</referenceTo>
        <relationshipName>Invoice_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__LastName__c</fullName>
        <label>LastName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Phone__c</fullName>
        <label>Phone</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Role__c</fullName>
        <label>Role</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SalutationLetter__c</fullName>
        <label>Salutation (Letter)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice Contact</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Debtor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>